[package]
name = "ansible-vault"
description = "encrypt and decrypt ansible vault"
version = "0.2.1"
authors = ["tangowithfoxtrot <facial.outboard349@addy.io>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/tangowithfoxtrot/ansible-vault-rs"
keywords = ["ansible", "crypto"]
categories = ["cryptography", "encoding"]

[dependencies]
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"
aes = "0.8.4"
block-padding = "0.3"
hex = "0.4"
rand = "0.9"
clap = { version = "4.5.35", features = ["derive", "env"] }
clap_complete = "4.5.47"
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
rpassword = "7.3.1"
ctr = { version = "0.9.2", features = ["block-padding"] }

[[bin]]
name = "a-vault"
path = "src/cli/main.rs"
